--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,1 @@
-  <div class="flex justify-center">
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
-  </div>
+<router-outlet></router-outlet>
