--- a/client/src/app/modules/overview/overview.component.html
+++ b/client/src/app/modules/overview/overview.component.html
@@ -1,7 +1,10 @@
 <page-body>
-  <page-header header></page-header>
-  <div body class="bg-red-400">
-    <h1 class="text-3xl font-bold underline flex justify-center">sono il component overview e il body della pagina</h1>
-    <input-search></input-search>
+  <page-header header>
+      <p title>Titolo</p>
+  </page-header>
+  <div body class="flex justify-center items-center h-full w-full">
+    <div class="w-full flex justify-center max-w-lg">
+      <input-search class="w-full"></input-search>
+    </div>
   </div>
 </page-body>
