--- a/client/src/app/shared/layout/page-body/page-body.component.html
+++ b/client/src/app/shared/layout/page-body/page-body.component.html
@@ -1,2 +1,6 @@
-<ng-content select="[header]"></ng-content>
-<ng-content select="[body]"></ng-content>
+<div class="flex flex-col bg-gray-200 h-full w-full">
+    <ng-content select="[header]"></ng-content>
+    <div class="w-full h-full bg-gray-200">
+        <ng-content select="[body]"></ng-content>
+    </div>
+</div>
