--- a/client/src/app/modules/search-result/search-result.component.html
+++ b/client/src/app/modules/search-result/search-result.component.html
@@ -4,7 +4,7 @@
     </page-header>
     <div body class="flex flex-col justify-center items-center mt-7 bg-gray-200">
       <div class="w-full flex justify-center max-w-lg">
-        <input-search class="w-full" [initialText]="searchtext"></input-search>
+        <input-search class="w-full" [initialText]="searchtext" [initialMode]="listService.mode"></input-search>
       </div>
       <ng-container *ngIf="(searchResult$ | async) as searchResult">
         <div class="mt-2 w-full h-full max-w-2xl " *ngFor="let res of searchResult">
@@ -14,19 +14,18 @@
           <p>{{res.review_title}}</p>
         </div>
       </ng-container>
-      <!-- <mat-paginator [length]="100" (page)="handlePageEvent($event)"
-              [pageSize]="pageSize" class="demo-paginator"
-              aria-label="Select page">
-      </mat-paginator> -->
-      <mat-paginator #paginator
-               class="demo-paginator"
-               (page)="handlePageEvent($event)"
-               [length]="100"
-               [pageSize]="pageSize"
-               [pageSizeOptions]="[]"
-               [hidePageSize]="true"
-               [pageIndex]="pageIndex"
-               aria-label="Select page">
-      </mat-paginator>
+
+      <ng-container *ngIf="(listService.sharedList$ | async) as sharedList">
+        <mat-paginator *ngIf="sharedList.length>10" #paginator
+                class="demo-paginator"
+                (page)="handlePageEvent($event)"
+                [length]="(10*length)"
+                [pageSize]="pageSize"
+                [pageSizeOptions]="[]"
+                [hidePageSize]="true"
+                [pageIndex]="pageIndex"
+                aria-label="Select page">
+        </mat-paginator>
+      </ng-container>
     </div>
   </page-body>
