Fix grafica ed aggiunta ricerca per titolo

--- a/client/src/app/modules/overview/overview.component.html
+++ b/client/src/app/modules/overview/overview.component.html
@@ -1,10 +1,10 @@
 <page-body>
   <page-header header>
-      <p title>Titolo</p>
+      <p title>Book review</p>
   </page-header>
   <div body class="flex justify-center items-center h-full w-full">
     <div class="w-full flex justify-center max-w-lg">
-      <input-search class="w-full"></input-search>
+      <input-search class="w-3/4 sm:w-full"></input-search>
     </div>
   </div>
 </page-body>
