change webapp's title

--- a/client/src/app/modules/search-result/search-result.component.html
+++ b/client/src/app/modules/search-result/search-result.component.html
@@ -1,6 +1,6 @@
 <page-body>
     <page-header header>
-        <p title>Titolo</p>
+        <p title>ReBook</p>
     </page-header>
     <div body class="flex flex-col justify-center items-center mt-7 bg-gray-200">
       <div class="w-full flex justify-center max-w-lg">
