--- a/client/src/app/modules/overview/overview.component.html
+++ b/client/src/app/modules/overview/overview.component.html
@@ -1,6 +1,6 @@
 <page-body>
   <page-header header>
-      <p title>Book review</p>
+    <p title>ReBook</p>
   </page-header>
   <div body class="flex justify-center items-center h-full w-full">
     <div class="w-full flex justify-center max-w-lg">
